# email-cli

./: Cargo.toml  README.md
skills/email-cli/: SKILL.md
skills/email-cli/agents/: openai.yaml
src/: lib.rs  main.rs
tests/: cli.rs
