[package]
name = "email-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
mail-parser = { version = "0.11.3", features = ["full_encoding"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.23.0"
